[update] 決済後のレス (#471)
* [update] capture_res

* Update swagger.yaml

* [clean] capture

* Update charge_command.go
