# pkg/domain/entity/capture.go
@@ -1,0 +1,9 @@
+package entity
+
+type (
+	CaptureResult struct {
+		CfProjectID    int `json:"cfProjectId"`
+		SupporterCount int `json:"supporterCount"`
+		AchievedPrice  int `json:"achievedPrice"`
+	}
+)
